--- a/source/less/swiper.less
+++ b/source/less/swiper.less
@@ -6,10 +6,8 @@
 
 .swiper__item {
   display: flex;
-  margin: 0;
   padding: 0;
-  margin-top: 55px;
-  margin-bottom: 40px;
+  margin: 55px 0 40px;
 }
 
 .swiper-slide{
@@ -30,12 +28,11 @@
 }
 
 .swiper__text {
-  font-family: 'Gilroy', sans-serif;
+  font-family: 'Onest', sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
-  margin: 0;
-  margin-top: 1px;
+  margin: 1px 0 0;
 }
 
 .swiper .swiper-wrapper {
@@ -45,5 +42,3 @@
   list-style: none;
   font-size: 0;
 }
-
-
