--- a/source/css/style.css
+++ b/source/css/style.css
@@ -98,10 +98,10 @@
   height: 128px;
 }
 .tabcontent__descr {
+  position: relative;
+  display: flex;
   max-width: 428px;
   width: 100%;
-  display: flex;
-  position: relative;
 }
 .tabcontent__svg {
   position: absolute;
@@ -258,10 +258,8 @@
 }
 .swiper__item {
   display: flex;
-  margin: 0;
   padding: 0;
-  margin-top: 55px;
-  margin-bottom: 40px;
+  margin: 55px 0 40px;
 }
 .swiper-slide {
   min-width: 180px;
@@ -279,12 +277,11 @@
   margin-top: 15px;
 }
 .swiper__text {
-  font-family: 'Gilroy', sans-serif;
+  font-family: 'Onest', sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
-  margin: 0;
-  margin-top: 1px;
+  margin: 1px 0 0;
 }
 .swiper .swiper-wrapper {
   height: 239px;
@@ -311,9 +308,6 @@
   width: 48px;
   height: 48px;
 }
-.arrow__img--left:focus {
-  background-image: url("../icons/arrow__left__active.png");
-}
 .arrow__img--left:hover {
   background-image: url("../icons/arrow__left__active.png");
 }
@@ -321,9 +315,6 @@
   background: url("../icons/arrow__right.png");
   width: 48px;
   height: 48px;
-}
-.arrow__img--right:focus {
-  background-image: url("../icons/arrow__right__active.png");
 }
 .arrow__img--right:hover {
   background-image: url("../icons/arrow__right__active.png");
