--- a/source/less/style.less
+++ b/source/less/style.less
@@ -11,8 +11,6 @@
 @import "arrow.less";
 @import "brands.less";
 
-
-
 //--------color---------//
 @black: #1B202D;
 @white: #FFFFFF;
@@ -22,10 +20,14 @@
 @gray4: #CBCBCB;
 
 div {
-  font-family: 'Onest', sans-serif;
+  font-family: "Onest", sans-serif;
 }
 
-h1, h2, h3, h4, h5 {
+h1,
+h2,
+h3,
+h4,
+h5 {
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
