--- a/source/less/tabcontent.less
+++ b/source/less/tabcontent.less
@@ -2,12 +2,11 @@
   display: flex;
   margin: 138px auto;
   margin-bottom: 129px;
-  height: 308px;;
+  height: 308px;
   max-width: 1182px;
   background-color: @gray2;
   border-radius: 20px;
   align-items: center;
-
 }
 
 .tabcontent__item {
@@ -15,7 +14,6 @@
   margin: 0 auto;
   width: 1000px;
   justify-content: space-between;
-
 }
 
 .tabcontent__descr--left {
@@ -41,7 +39,7 @@
 
   &:hover {
     transform: scale(1.2);
-    transition: transform .7s;
+    transition: transform 0.7s;
   }
 }
 
@@ -60,7 +58,7 @@
 }
 
 .tabcontent__border {
-  border: 1px solid #CED1D8;
+  border: 1px solid #ced1d8;
   height: 70px;
   margin: auto 0;
 }
