--- a/source/less/info.less
+++ b/source/less/info.less
@@ -4,7 +4,8 @@
   margin: 0 auto;
   height: 540px;
 }
-.info__contact__top{
+
+.info__contact__top {
   position: absolute;
   width: 239px;
   height: 53px;
@@ -13,6 +14,7 @@
   background-color: @black;
   border-radius: 12px;
 }
+
 .info__block {
   position: relative;
   max-width: 630px;
@@ -48,22 +50,23 @@
   font-size: 18px;
   height: 20px;
   margin-bottom: 42px;
+  transition: 0.5s;
 
-  &:hover{
+  &:hover {
     font-size: 20px;
-    transition: .5s;
   }
+
   &:hover .info__img {
     clear: both;
-    transition: .5s;
     transform: scale(1.1);
   }
 
   &:last-child {
-      margin-bottom: 0;
+    margin-bottom: 0;
   }
 }
-.info__text--top{
+
+.info__text--top {
   position: absolute;
   color: @white;
   bottom: 12px;
