--- a/source/less/swiper.less
+++ b/source/less/swiper.less
@@ -10,7 +10,7 @@
   margin: 55px 0 40px;
 }
 
-.swiper-slide{
+.swiper-slide {
   min-width: 180px;
   height: 239px;
   background-color: @gray2;
@@ -18,6 +18,7 @@
   border-radius: 20px;
   transform: rotate(-0.09deg);
   text-align: center;
+
   &:last-child {
     margin-right: 0;
   }
@@ -28,7 +29,7 @@
 }
 
 .swiper__text {
-  font-family: 'Onest', sans-serif;
+  font-family: "Onest", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
