--- a/source/less/style.less
+++ b/source/less/style.less
@@ -19,6 +19,19 @@
 @gray3: #555B69;
 @gray4: #CBCBCB;
 
+//---------Viewport--------//
+@mobile-width: 320px;
+@tablet-width: 768px;
+@desktop-width: 1200px;
+
+//--------index--------//
+.index {
+  font-size: 14px;
+  line-height: 26px;
+  margin: 0 auto;
+  background: white;
+}
+
 div {
   font-family: "Onest", sans-serif;
 }
@@ -41,21 +54,13 @@ h3 {
   color: @gray3;
 }
 
-//--------index--------//
-.index {
-  font-size: 14px;
-  line-height: 26px;
-  min-width: 320px;
-  margin: 0 auto;
-  background: white;
-}
 
 header {
   background-color: @gray4;
 }
 
 main {
-  max-width: 1440px;
+  //max-width: 1440px;
   margin: 0 auto;
 }
 
