--- a/source/less/address.less
+++ b/source/less/address.less
@@ -2,12 +2,12 @@
   margin-top: 17px;
   display: inline-block;
   position: absolute;
-  left: 0;
+  left: 2%;
   color: @black;
   text-decoration: none;
   align-items: center;
   font-weight: 400;
-  font-size: 18px;
+  font-size: 12px;
 
   &:hover {
     font-size: 20px;
@@ -18,6 +18,11 @@
     clear: both;
     transition: 1s;
     transform: scale(1.2);
+  }
+
+  @media (min-width: @tablet-width) {
+    font-size: 18px;
+    left: 0;
   }
 }
 
