--- a/source/less/info.less
+++ b/source/less/info.less
@@ -23,7 +23,7 @@
   @media (min-width: @tablet-width) {
     width: 239px;
     height: 53px;
-    right: 0;;
+    right: 0;
     top: 60px;
     left: 0;
   }
