--- a/source/less/tabcontent.less
+++ b/source/less/tabcontent.less
@@ -1,22 +1,31 @@
 .tabcontent {
   display: flex;
-  margin: 138px auto;
+  margin: 85px auto;
   margin-bottom: 129px;
-  height: 308px;
+  height: 330px;
   max-width: 1182px;
   background-color: @gray2;
   border-radius: 20px;
   align-items: center;
+
+  @media (min-width: @tablet-width) {
+    margin: 136px auto;
+    margin-bottom: 129px;
+    height: 311px;
+    //height: 93px;
+  }
 }
 
 .tabcontent__item {
   display: grid;
   margin: 0 auto;
   justify-content: space-between;
+  padding: 0 20px;
 
   @media (min-width: @tablet-width) {
     display: flex;
     width: 1000px;
+    padding: 0;
   }
 }
 
