--- a/source/less/address.less
+++ b/source/less/address.less
@@ -27,6 +27,17 @@
 }
 
 .address__item {
-  vertical-align: middle;
   margin-right: 12px;
+}
+
+.address__img {
+  width: 18px;
+  height: 18px;
+  vertical-align: middle;
+  margin-bottom: 2px;
+
+  @media (min-width: @tablet-width) {
+    width: 24px;
+    height: 24px;
+  }
 }
