--- a/source/less/descr.less
+++ b/source/less/descr.less
@@ -13,9 +13,15 @@
   letter-spacing: 1px;
   font-style: normal;
   font-weight: 500;
-  font-size: 46px;
+  font-size: 30px;
   line-height: 139%;
   margin: 0;
+  padding: 0 10px;
+
+  @media (min-width: @tablet-width) {
+    padding: 0;
+    font-size: 46px;
+  }
 }
 
 .descr__text {
