--- a/source/less/info.less
+++ b/source/less/info.less
@@ -88,11 +88,12 @@
 }
 
 .info__img--top {
-  margin-top: 0;
+  margin-top: 2px;
   width: 18px;
   height: 18px;
 
   @media (min-width: @tablet-width) {
+
     margin-top: -7px;
     width: 24px;
     height: 24px;
@@ -121,11 +122,21 @@
   }
 }
 
+.info__text--time {
+  &:hover {
+    font-size: 18px;
+  }
+
+  &:hover .info__img--time {
+    transform: scale(1);
+  }
+}
+
 .info__text--top {
   text-decoration: none;
   position: absolute;
   color: @white;
-  bottom: 12px;
+  bottom: 14px;
   left: 9px;
   font-size: 13px;
   height: 20px;
@@ -134,6 +145,7 @@
     left: 30px;
     font-size: 18px;
     transition: 0.5s;
+    bottom: 12px;
 
     &:hover {
       font-size: 20px;
