--- a/source/less/tabcontent.less
+++ b/source/less/tabcontent.less
@@ -25,6 +25,10 @@
   @media (min-width: @tablet-width) {
     display: flex;
     width: 1000px;
+    padding: 0 10px;
+  }
+
+  @media (min-width: @desktop-width){
     padding: 0;
   }
 }
